--- a/src/app/components/sections/footer/footer.component.html
+++ b/src/app/components/sections/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div class="footer-wrapper">
   <div class="footer d-flex flex-column flex-lg-row gap-5">
     <div class="footer-header">
-      <h1>JobNet</h1>
+      <a class="brand-logo" routerLink="/">
+        <img src="/assets/jobnetlogo2.png" alt="" width="150" height="45" style="object-fit: cover;" loading="lazy">
+      </a>
       <a href="">jobnetsupport&#64;new.com</a>
       <div class="mt-5">
         <img src="/assets/shape-2.svg" alt="" width="55" height="55" />
